--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "homepage": "https://bartekppr.github.io/src/main.jsx"
+    "homepage": "https://bartekppr.github.io/src/main.jsx",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
@@ -29,5 +29,6 @@
     "vite": "^7.1.2"
   }
 }
+
 
 
